syntax = "proto3";

package io.stellarproject.v1;

import weak "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/stellarproject/terraos/api/v1;v1";

service Infrastructure {
	rpc Provision(ProvisionNodeRequest) returns (ProvisionNodeResponse);
	rpc List(google.protobuf.Empty) returns (ListNodeResponse);
	rpc InstallPXE(InstallPXERequest) returns (google.protobuf.Empty);
	rpc Delete(DeleteNodeRequest) returns (google.protobuf.Empty);
}

message ProvisionNodeRequest {
	string hostname = 1;
	string mac = 2;
	string image = 3;
	Filesystem fs = 4;
}

message ProvisionNodeResponse {
	Node node = 1;
}

message ListNodeResponse {
	repeated Node nodes = 1;
}

message InstallPXERequest {
	string image = 1;
}

message DeleteNodeRequest {
	string hostname = 1;
}

message Node {
	string hostname = 1;
	string mac = 2;
	string initiator_iqn = 3;
	string target_iqn = 4;
	Filesystem fs = 5;
	string image = 6;
	int64 target_id = 7;
	int64 lun_id = 8;
	string lun_path = 9;
}

message Filesystem {
	string backing_uri = 1;
	int64 fs_size = 2;
	repeated Subvolume subvolumes = 3;
}

message Subvolume {
	string name = 1;
	string path = 2;
}
