syntax = "proto3";

package io.stellarproject.services.v1;

import weak "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "github.com/stellarproject/terraos/api/v1/types/types.proto";

option go_package = "github.com/stellarproject/terraos/api/v1/services;services";

service Infrastructure {
	rpc Provision(ProvisionNodeRequest) returns (ProvisionNodeResponse);
	rpc List(google.protobuf.Empty) returns (ListNodeResponse);
	rpc InstallPXE(InstallPXERequest) returns (google.protobuf.Empty);
	rpc Delete(DeleteNodeRequest) returns (google.protobuf.Empty);
	rpc Info(google.protobuf.Empty) returns (InfoResponse);
}

message ProvisionNodeRequest {
	string hostname = 1;
	string mac = 2;
	string image = 3;
	types.v1.Filesystem fs = 4;
}

message ProvisionNodeResponse {
	types.v1.Node node = 1;
}

message ListNodeResponse {
	repeated types.v1.Node nodes = 1;
}

message InstallPXERequest {
	string image = 1;
}

message DeleteNodeRequest {
	string hostname = 1;
}

message InfoResponse {
	string pxe_version = 1;
	string gateway = 2;
	repeated types.v1.Target targets = 3;
}
